# src/main/resources/static/swagger.yml
@@ -289,39 +289,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
   /category/{categoryId}:
-    get:
-      tags:
-        - categories
-      summary: Find category by ID
-      description: Returns a single category
-      operationId: getCategoryById
-      parameters:
-        - name: categoryId
-          in: path
-          description: ID of category to return
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Category'
-        '400':
-          description: Invalid ID supplied
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '404':
-          description: Category not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
     put:
       tags:
         - categories
